# XPEID

./: CMakeLists.txt  LICENSE  README.md  update_timestamp.cmd  update_timestamp.sh  xpeid.cmake  xpeid.cpp  xpeid.h  xpeid.pri
.github/workflows/: db-release.yml
peid/: info.ini
peid/Binary/: archive.userdb.txt  file_format.userdb.txt
peid/COM/: packer.userdb.txt
peid/MSDOS/: dos_extender.userdb.txt
peid/PE/: compiler.userdb.txt  crypter.userdb.txt  file_format.userdb.txt  installer.userdb.txt  joiner.userdb.txt  overlay.userdb.txt  packer.userdb.txt  protection.userdb.txt  protector.userdb.txt  sfx_archive.userdb.txt  split_userdb.ps1
